--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <div id="app"></div>
 
-    <script src="build/main.min.js"></script>
+    <!-- inject:js -->
+    <!-- endinject -->
 </body>
 </html>
